# mobagen

./: CHANGELOG.md
core/engine/: Engine.cpp  Engine.h  EngineSettings.h
core/math/: Point2D.h
examples/catchthecat/: Agent.cpp  Agent.h  Cat.cpp  Catcher.cpp  World.cpp  World.h  main.cpp
examples/flocking/behaviours/: AlignmentRule.cpp  CohesionRule.cpp  MouseInfluenceRule.cpp  SeparationRule.cpp  WindRule.cpp
examples/headless/: CMakeLists.txt  main.cpp
examples/life/rules/: HexagonGameOfLife.cpp  JohnConway.cpp
examples/maze/generators/: HuntAndKillExample.cpp  HuntAndKillExample.h  RecursiveBacktrackerExample.cpp
